# pfo-cli

./: .env.example  .gitignore  Brewfile  Makefile  README.md  config.ini  pyproject.toml  pytest.ini  repo.md
.github/: release-drafter-config.yml
.github/ISSUE_TEMPLATE/: bug.yml  epic.md  subtask.yml  task.yml
.github/workflows/: actions-entrypoint.yml  dry-build-and-deploy.yml  dry-draft-version.yml  dry-unit-tests.yml  dry-versions.yml  promote.yml
.github/workflows/src/: initial_release.py  poetry_python.py  project_versions.py  promote.py
.install/: _dl_inst.sh  install.sh  installer.sh
docs/: index.md
docs/commands/: app.md  k8s.md  package.md  repo.md
pfo/: __init__.py  config.py  github.py  package.py  tools.py
pfo/applications/: __init__.py
pfo/argocd/: __init__.py  functions.py  keys.py  manifest.py  manifest.py.old  test_functions.py  tls.py
pfo/k8s/: __init__.py  cloud.py  k8s_config.json  metallb.py  traefik.py
pfo/k8s/argocd/: __init__.py  keys.py
pfo/monitoring/: __init__.py  grafana.py  loki.py  prometheus.py
pfo/pfo_doppler/: __init__.py  auth.py  config.py  project.py  secrets.py
pfo/pfo_github/: functions.py  init.py  templates.py
pfo/shared/: __init__.py  commands.py  etc.py  ssh.py  test_etc.py
pfo/src/: config.py  github.py  kubernetes.py  kubernetes.py.bak  package.py  test_tools.py  tools.py
scripts/: install.sh  replace-tag.sh  setup-app.sh  traefik_install.sh
test/: test_grafana.py
